--- a/footer.css
+++ b/footer.css
@@ -1,5 +1,40 @@
 footer {
-    height: 300px;
+    height: 250px;
     background-color: #4444bb;
+    display: flex;
+    justify-content: center;
+}
+
+.footerGroup {
+    display: flex;
+    width: 200px;
+    flex-direction: column;
+    margin: 30px;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+.footTitle {
+    border-bottom: 2px solid white;
+    color: white;
+    font-size: 25px;
     
+}
+
+ul {
+    display: flex;
+    flex-direction: column;
+    padding-left: 0;
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+
+.footerGroup a,
+.footerGroup li {
+    display: flex;
+    justify-content: left;
+    text-decoration: none;
+    list-style-type: none;
+    color: white;
+    padding: 2px;
 }
