--- a/topNav.css
+++ b/topNav.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding: 5px;
+
 }
 
 .topLeftMenu {
@@ -24,7 +24,8 @@
     top: 6px;
 }
 
-a {
+.topLeftMenu,
+.topRightMenu {
     border-right: 1px solid white;
     padding: 5px;
 }
